# raylm

./: .dockerignore  .gitignore  API_USAGE.md  DOCKER_USAGE.md  Dockerfile  LICENSE  QUICKSTART.md  README.md  docker-compose.yml  ingestor.py  pyproject.toml  ray_ingestor.py  ray_pdf_parser.py  stages.py  test_batch_parse.py  utils.py
experiments/: actor_ingestor.py  ingestor.py  nemotron_parse_ingestor.py  single_process_ingestor.py
src/: api.py  ingestor.py  query.py  stages.py  test.py
src/raylm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: example_local_embedding.py  inference_test.py  test_local_embedding.py  test_page_elements_gpu.py
