[project]
name = "raylm"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "lancedb>=0.25.3",
    "markitdown>=0.1.3",
    "nemotron-graphic-elements-v1",
    "nemotron-table-structure-v1>=1.0.0",
    "openai>=2.7.2",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "pypdfium2>=5.0.0",
    "ray>=2.51.1",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "sentencepiece>=0.2.1",
]

[tool.uv.sources]
nemotron-table-structure-v1 = { path = "../nemotron-table-structure-v1", editable = true }
nemotron-graphic-elements-v1 = { path = "../nemotron-graphic-elements-v1", editable = true }
