[project]
name = "raylm"
version = "0.1.0"
description = "RayLM Document Ingestion Service with FastAPI"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "lancedb>=0.25.3",
    "markitdown>=0.1.3",
    "numpy>=1.24.0",
    "openai>=2.7.2",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "pypdfium2>=5.0.0",
    "python-multipart>=0.0.9",
    "ray>=2.51.1",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "sentencepiece>=0.2.1",
    "torch>=2.0.0",
    "transformers==4.47.1",
    "uvicorn[standard]>=0.32.0",
    "nemotron-page-elements-v3>=3.0.0",
    "nemotron-graphic-elements-v1>=1.0.0",
    "nemotron-table-structure-v1>=1.0.0",
    "nemotron-ocr>=1.0.0"
]

[project.scripts]
raylm-api = "api:main"

[tool.setuptools]
package-dir = {"" = "src"}
